@@ -49,8 +49,10 @@ CLEANFILES = test_packbits.tif o-*
 
 if HAVE_JPEG
 JPEG_DEPENDENT_CHECK_PROG=raw_decode
+JPEG_DEPENDENT_TESTSCRIPTS=tiff2rgba-quad-tile.jpg.sh
 else
 JPEG_DEPENDENT_CHECK_PROG=
+JPEG_DEPENDENT_TESTSCRIPTS=
 endif
 
 # Executable programs which need to be built in order to support tests
@@ -133,7 +135,7 @@ TESTSCRIPTS = \
 	tiff2rgba-palette-1c-8b.sh \
 	tiff2rgba-rgb-3c-16b.sh \
 	tiff2rgba-rgb-3c-8b.sh \
-	tiff2rgba-quad-tile.jpg.sh
+	$(JPEG_DEPENDENT_TESTSCRIPTS)
 
 # This list should contain all of the TIFF files in the 'images'
 # subdirectory which are intended to be used as input images for
